tests/snapshots/schema_snapshots__reserved_collision_ddl.snap
---
source: tests/schema_snapshots.rs
expression: joined
---
CREATE SCHEMA IF NOT EXISTS "test_snapshot_reserved_collision";

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."_metadata" (
    "key" TEXT PRIMARY KEY,
    "value" JSONB NOT NULL
);

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."_checkpoints" (
    "stream" TEXT PRIMARY KEY,
    "last_slot" BIGINT,
    "last_signature" VARCHAR(88),
    "updated_at" TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."reservedcollisionaccount" (
    "pubkey" TEXT PRIMARY KEY,
    "slot_updated" BIGINT NOT NULL,
    "write_version" BIGINT NOT NULL DEFAULT 0,
    "lamports" BIGINT NOT NULL,
    "data" JSONB NOT NULL,
    "is_closed" BOOLEAN NOT NULL DEFAULT FALSE,
    "updated_at" TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    "real_column" BIGINT,
    "another_real" TEXT
);

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."_9digitprefixaccount" (
    "pubkey" TEXT PRIMARY KEY,
    "slot_updated" BIGINT NOT NULL,
    "write_version" BIGINT NOT NULL DEFAULT 0,
    "lamports" BIGINT NOT NULL,
    "data" JSONB NOT NULL,
    "is_closed" BOOLEAN NOT NULL DEFAULT FALSE,
    "updated_at" TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    "_9start_field" BIGINT,
    "normal_field" TEXT
);

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."selectaccount" (
    "pubkey" TEXT PRIMARY KEY,
    "slot_updated" BIGINT NOT NULL,
    "write_version" BIGINT NOT NULL DEFAULT 0,
    "lamports" BIGINT NOT NULL,
    "data" JSONB NOT NULL,
    "is_closed" BOOLEAN NOT NULL DEFAULT FALSE,
    "updated_at" TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    "select" BIGINT,
    "from" TEXT,
    "where" BOOLEAN
);

CREATE TABLE IF NOT EXISTS "test_snapshot_reserved_collision"."_instructions" (
    "id" BIGSERIAL PRIMARY KEY,
    "signature" TEXT NOT NULL,
    "slot" BIGINT NOT NULL,
    "block_time" BIGINT,
    "instruction_name" TEXT NOT NULL,
    "instruction_index" SMALLINT NOT NULL,
    "inner_index" SMALLINT,
    "args" JSONB NOT NULL,
    "accounts" JSONB NOT NULL,
    "data" JSONB NOT NULL,
    "is_inner_ix" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE UNIQUE INDEX IF NOT EXISTS "uq__instructions_sig_idx" ON "test_snapshot_reserved_collision"."_instructions" ("signature", "instruction_index", COALESCE("inner_index", -1));

CREATE INDEX IF NOT EXISTS "idx_reservedcollisionaccount_slot_updated" ON "test_snapshot_reserved_collision"."reservedcollisionaccount" ("slot_updated");

CREATE INDEX IF NOT EXISTS "gin_reservedcollisionaccount_data" ON "test_snapshot_reserved_collision"."reservedcollisionaccount" USING gin ("data" jsonb_path_ops);

CREATE INDEX IF NOT EXISTS "idx__9digitprefixaccount_slot_updated" ON "test_snapshot_reserved_collision"."_9digitprefixaccount" ("slot_updated");

CREATE INDEX IF NOT EXISTS "gin__9digitprefixaccount_data" ON "test_snapshot_reserved_collision"."_9digitprefixaccount" USING gin ("data" jsonb_path_ops);

CREATE INDEX IF NOT EXISTS "idx_selectaccount_slot_updated" ON "test_snapshot_reserved_collision"."selectaccount" ("slot_updated");

CREATE INDEX IF NOT EXISTS "gin_selectaccount_data" ON "test_snapshot_reserved_collision"."selectaccount" USING gin ("data" jsonb_path_ops);

CREATE INDEX IF NOT EXISTS "idx__instructions_slot" ON "test_snapshot_reserved_collision"."_instructions" ("slot");

CREATE INDEX IF NOT EXISTS "idx__instructions_signature" ON "test_snapshot_reserved_collision"."_instructions" ("signature");

CREATE INDEX IF NOT EXISTS "idx__instructions_instruction_name" ON "test_snapshot_reserved_collision"."_instructions" ("instruction_name");

CREATE INDEX IF NOT EXISTS "idx__instructions_block_time" ON "test_snapshot_reserved_collision"."_instructions" ("block_time");

CREATE INDEX IF NOT EXISTS "gin__instructions_data" ON "test_snapshot_reserved_collision"."_instructions" USING gin ("data" jsonb_path_ops);

CREATE INDEX IF NOT EXISTS "gin__instructions_args" ON "test_snapshot_reserved_collision"."_instructions" USING gin ("args" jsonb_path_ops);
